avplayer switch with BunnyStreamLivePlayer
